--- a/docs/root/version_history/v1.15.0.rst
+++ b/docs/root/version_history/v1.15.0.rst
@@ -149,7 +149,7 @@ Deprecated
 * Tracing provider configuration as part of :ref:`bootstrap config <envoy_v3_api_field_config.bootstrap.v3.Bootstrap.tracing>`
   has been deprecated in favor of configuration as part of :ref:`HTTP connection manager
   <envoy_v3_api_field_extensions.filters.network.http_connection_manager.v3.HttpConnectionManager.Tracing.provider>`.
-* The :ref:`HTTP Gzip filter <config_http_filters_gzip>` has been deprecated in favor of
+* The HTTP Gzip filter has been deprecated in favor of
   :ref:`Compressor <config_http_filters_compressor>`.
 * The * :ref:`GoogleRE2.max_program_size<envoy_v3_api_field_type.matcher.v3.RegexMatcher.GoogleRE2.max_program_size>`
   field is now deprecated. Management servers are expected to validate regexp program sizes
