--- a/docs/root/version_history/v1.8.0.rst
+++ b/docs/root/version_history/v1.8.0.rst
@@ -84,7 +84,7 @@ Changes
 * rbac network filter: a :ref:`role-based access control network filter <v1.8.0:config_network_filters_rbac>` has been added.
 * rest-api: added ability to set the :ref:`request timeout <v1.8.0:envoy_api_field_core.ApiConfigSource.request_timeout>` for REST API requests.
 * route checker: added v2 config support and removed support for v1 configs.
-* router: added ability to set request/response headers at the :ref:`envoy_api_msg_route.Route` level.
+* router: added ability to set request/response headers at the :ref:`v1.8.0:envoy_api_msg_route.Route` level.
 * stats: added :ref:`option to configure the DogStatsD metric name prefix <v1.8.0:envoy_api_field_config.metrics.v2.DogStatsdSink.prefix>` to DogStatsdSink.
 * tcp_proxy: added support for :ref:`weighted clusters <v1.8.0:envoy_api_field_config.filter.network.tcp_proxy.v2.TcpProxy.weighted_clusters>`.
 * thrift_proxy: introduced thrift routing, moved configuration to correct location
